# boolalg-calc

./: CMakeLists.txt  boolean_expression.cpp  boolean_expression.h  boolexpr.cpp  boolexpr.h  kmap.cpp  kmap.h  main.cpp
output/: test2
test/: test1.cpp  test2.cpp  test3.cpp
